# rsd

./: .gitignore  CMakeLists.txt  LICENSE  cJSON.h  rsd.h  rsd_buff.h  rsd_errc.h  rsd_json.h  rsd_logf.h  rsd_path.h  rsd_pid.h  rsd_stdio.h  rsd_tests.c
.github/workflows/: cmake-multi-platform.yml
cmake/modules/: FindZSTD.cmake
tests/: rsd_tests.c
